--- a/Module 8/SVG.html
+++ b/Module 8/SVG.html
@@ -5,6 +5,20 @@
     <title>title</title>
 </head>
 <body>
+    <nav>
+        <ul>
+            <a href="indes.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.hmtl">Contact Us</a>
+    
+        </ul>
+        </nav>
+        <h1>Home</h1>
+    <p>You are at home</p>
+
+
+
+
     <h1>Insertimi SVG</h1>
 
     <svg width="500" height="500">
@@ -23,3 +37,13 @@ fill="green" stroke-width="2" stroke="blue">
 
 </body>
 </html>
+<nav>
+    <ul>
+        <a href="indes.html">html</a>
+        <a href="about.html">About Us</a>
+        <a href="contact.hmtl">Contact Us</a>
+
+    </ul>
+    </nav>
+    <h1>Home</h1>
+<p>You are at home</p>
