--- a/Module 12/text-styles.html
+++ b/Module 12/text-styles.html
@@ -10,5 +10,6 @@
     <h1 class="text">Header one</h1>
     <p class="text-style">ZEMRA</p>
     <i class="material-icons" size;>favorite</i>
+    <a href="https://www.google.com/maps">Google maps</a>
 </body>
 </html>
