--- a/Module 13/book-examples.html.html
+++ b/Module 13/book-examples.html.html
@@ -17,7 +17,7 @@
     <li>I dyti</li>
     <li>I treti</li>
 </ol>
-<table border="1">
+<table class="tableone">
     <tr>
         <th>Emri</th>
         <th>Mbiemri</th>
@@ -28,7 +28,114 @@
     <td>Sopa</td>
 <td>17</td>
 </tr>
+<tr>
+    <td>Greta</td>
+<td>Sopa</td>
+<td>16</td>
+</tr>
+<tr>
+    <td>Era</td>
+    <td>Elshani</td>
+    <td>17</td>
+</tr>
 </table>
+
+
+
+
+<br>
+<br>
+<br>
+
+
+
+<div>
+    <table>
+        <tr>
+    <td>Emri</td>
+    <td>Mbiemri</td>
+    <td>Shteti</td>
+    <td>Qyteti</td>
+    <td>Mosha</td>
+    <td>Profesioni</td>
+</tr>
+<tr>
+    <td>Altin</td>
+    <td>Sopa</td>
+    <td>Kosova</td>
+    <td>Suhareka</td>
+    <td>17</td>
+    <td>Student</td>
+
+</tr>
+<tr>
+    <td>Era</td>
+    <td>Elshani</td>
+    <td>Kosova</td>
+    <td>Suhareka</td>
+    <td>17</td>
+    <td>Student</td>
+
+</tr>
+<tr>
+    <td>Zana</td>
+    <td>Elshani</td>
+    <td>Kosova</td>
+    <td>Suhareka</td>
+    <td>17</td>
+    <td>Student</td>
+
+</tr>
+<tr>
+    <td>Greta</td>
+    <td>Sopa</td>
+    <td>Kosova</td>
+    <td>Suhareka</td>
+    <td>17</td>
+    <td>Student</td>
+
+</tr>
+<tr>
+    <td>Artan</td>
+    <td>Lumi</td>
+    <td>Kosova</td>
+    <td>Suhareka</td>
+    <td>17</td>
+    <td>Student</td>
+
+</tr>
+<tr>
+    <td>Altin</td>
+    <td>Sopa</td>
+    <td>Kosova</td>
+    <td>Suhareka</td>
+    <td>17</td>
+    <td>Student</td>
+
+</tr>
+<tr>
+    <td>Zana</td>
+    <td>Elshani</td>
+    <td>Kosova</td>
+    <td>Suhareka</td>
+    <td>17</td>
+    <td>Student</td>
+
+</tr>
+<tr>
+    <td>Zana</td>
+    <td>Elshani</td>
+    <td>Kosova</td>
+    <td>Suhareka</td>
+    <td>17</td>
+    <td>Student</td>
+
+</tr>
+
+
+    
+    </table>
+</div>
     
 </body>
 </html>
