--- a/Module 15/Positions.html
+++ b/Module 15/Positions.html
@@ -8,11 +8,7 @@
 <body>
     <h1>Positions</h1>
     <div class="static">This div is static</div>
-    <div class="relative">This div is relative</div>
-    <br>
-    <br>
-    <br>
-    <div class="absolute">This div is absolute</div>
+    <div class="relative"><div class="absolute">This div is absolute</div></div>
     <div class="sticky">This div is sticky</div>
     <div class="fixed">This div is fixed</div>
 </body>
