--- a/Autosuhareka/Home.html
+++ b/Autosuhareka/Home.html
@@ -9,6 +9,20 @@
     <h1>AutoSuhareka</h1>
     <p>Zgjedhja e duhur per veturen tuaj.</p>
     </section>
-    
+    <section>
+        <h1>Veturat</h1>
+    </section>
+    <section>
+        <p>Golf 8 2021 2.0TDI Automatik</p>
+        <p>Golf 8 2021 2.0TDI Automatik</p>
+        <p>Golf 8 2021 2.0TDI Automatik</p>
+        <p>Peugeot 308 1.5Hdi 2018 Automatik</p>
+        <p>Opel Grandland 2020 1.5 Automatik</p>
+        <p>Golf 7.5 Karavan 2019 1.6TDI Automatik</p>
+        <p>Opel Astra</p>
+        <p></p>
+
+        </p>
+    </section>
 </body>
 </html>
