--- a/Module 28/style.html
+++ b/Module 28/style.html
@@ -8,6 +8,6 @@
 <body>
    <button id="btn1">Click</button>
 <h1 id="text1">Digital School</h1>
-<script src=" "></script>
+<script src="style.js"></script>
 </body>
 </html>
